--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" img src="/sae301-src/public/img/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Logo</title>
   </head>
   <body>
     <div id="app"></div>
