--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css">
+   <!-- JQuery Avant Bootstrap -->
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+
+   <!-- Bootstrap 4 -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+   <!-- Font-awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+   <link rel="stylesheet" href="style.css">
     <link rel="icon" img src="/sae301-src/public/img/logo.svg">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Brown+Sugar">
+    <link rel="stylesheet" href="https://use.typekit.net/abcdefg.css">
+
+  
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logo</title>
   </head>
