--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-   <!-- Font-awesome -->
+   <!-- Font -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
    <link rel="stylesheet" href="style.css">
-    <link rel="icon" img src="/sae301-src/public/img/logo.svg">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Brown+Sugar">
     <link rel="stylesheet" href="https://use.typekit.net/abcdefg.css">
 
+ <!-- Customisation -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   
+    <link rel="icon" img src="/sae301-src/public/img/logo.svg">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logo</title>
